<resources>
    <string name="app_name">AirAsia BIG</string>
    <string name="version">Version 1.1.6</string>
    <string-array name="gender">
        <item>Male/Male</item>
        <item>Female/Female</item>
    </string-array>
    <string name="ab_cancel">Cancel</string>
    <string name="ab_search">Search</string>
    <string name="ab_logout">LOG OUT</string>
    <string name="ab_plus">+</string>
    <string name="ab_done_c">DONE</string>
    <string name="ab_done">DONE</string>
    <string name="ab_save_cptl">SAVE</string>
    <string name="ab_continuev2">Continue</string>
    <string name="ab_next">NEXT</string>
    <string name="ab_login_c">LOG IN</string>
    <string name="ab_edit">Edit</string>
    <string name="onboarding_skip">SKIP</string>
    <string name="onboarding_continue">CONTINUE</string>
    <string name="login_button">LOG IN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="header_welcome_back">Welcome back</string>
    <string name="header_user_profile">User Profile</string>
    <string name="header_addons">Add-ons</string>
    <string name="header_addons_capital">ADD ONS</string>
    <string name="header_pick_seat">Pick a Seat</string>
    <string name="header_checkout">Checkout</string>
    <string name="header_payment">PAYMENT</string>
    <string name="header_select_card">Select Card</string>
    <string name="header_summary">Summary</string>
    <string name="header_traveller_info">Traveller’s Info</string>
    <string name="header_depart">Departure</string>
    <string name="depart_flight">Depart Flight</string>
    <string name="passenger_title_with_s">Passenger(s)</string>
    <string name="header_return">Return</string>
    <string name="return_flight">Return Flight</string>
    <string name="notification">Notification</string>
    <string name="TBD_home">Homepage</string>
    <string name="TBD_user_profile">User Profile</string>
    <string name="TBD_flight_search">Flight Search</string>
    <string name="TBD_big_fun">BIG Fun Trivia</string>
    <string name="register_continue_button">Continue</string>
    <string name="register_confirm_password">Confirm Password </string>
    <string name="register_basic_information">BASIC INFORMATION</string>
    <string name="register_country">Country</string>
    <string name="register_state">State</string>
    <string name="register_language">Language</string>
    <string name="register_password_policy">Password Policy</string>
    <string name="book_flight">BOOK FLIGHT</string>
    <string name="book_flight_one_way">ONE-WAY</string>
    <string name="book_flight_return">ROUND TRIP</string>
    <string name="book_flight_adult">Adult</string>
    <string name="book_flight_basic">BASIC</string>
    <string name="book_flight_premier">PREMIER</string>
    <string name="general_continue">Continue</string>
    <string name="general_success">Success!</string>
    <string name="pts">pts</string>
    <string name="home_exit">EXIT</string>
    <string name="home_confirm_exit">Confirm exit?</string>
    <string name="home_cancel">Cancel</string>
    <string name="home_close">Close</string>
    <string name="home_show">Show</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_terms">Terms</string>
    <string name="forgotPasswordExpired">PASSWORD EXPIRED</string>
    <string name="forgotPasswordCurrent">Current Password</string>
    <string name="forgotPasswordNew">New Password</string>
    <string name="forgotPasswordConfirm">Confirm Password</string>
    <string name="date_ob">Date Of Birth</string>
    <string name="textview_placeholder_lbl">TextView</string>
    <string name="stateListDialogTitle">Please select state</string>
    <string name="failed_load">Failed to load</string>
    <string name="login_">Login</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_fb_button">Login via Facebook</string>
    <string name="login_example_email">example@mail.com</string>
    <string name="login_example_password">********</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_email">example@mail.com</string>
    <string name="title_activity_password_expired">PasswordExpiredActivity</string>
    <string name="password_expire_text">Your password has expired and needs to be changed. The password must consist of at least 8 characters, must include one uppercase letter, one lowercase letter, one numeric digit and one symbol. Example: SkyPark+123</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_password">Current Password</string>
    <string name="btn_continue">Continue ></string>
    <string name="fill_emtpy_field">Something went wrong. Please correct any errors indicated</string>
    <string name="success">Success!</string>
    <string name="reset_new_password">New Password</string>
    <string name="profile_my_profile">My Profile</string>
    <string name="tbd_my_big_point">My BIG Points</string>
    <string name="tbd_my_credit_card">My Credit Card</string>
    <string name="facebook">Facebook</string>
    <string name="options">Options</string>
    <string name="options_app_settings">App Settings</string>
    <string name="options_information">Information</string>
    <string name="options_about">About</string>
    <string name="btn_nxt">NEXT</string>
    <string name="options_about_follow">Follow us to get latest updates</string>
    <string name="options_terms">BIG Loyalty Membership</string>
    <string name="options_terms_conditions">Terms and Conditions</string>
    <string name="options_privacy">TBD Privacy Policy</string>
    <string name="options_reset_password">Reset Password</string>
    <string name="option_reset_password_text">To reset your password, enter the email address you use to sign in to AirAsia BIG.</string>
    <string name="options_change_language">Change Language</string>
    <string name="options_logout">Logout</string>
    <string name="option_select_language">SELECT LANGUAGE</string>
    <string name="tbd_big_point_no_credit_card">No Credit Card</string>
    <string name="credit_card_number">Card Number</string>
    <string name="credit_card_expiry_date">Expiry Date</string>
    <string name="credit_card_cvv">CVV</string>
    <string name="credit_card_country">Country</string>
    <string name="profile_personal_details">Personal Details</string>
    <string name="profile_salutation">Salutation</string>
    <string name="profile_given_name">Given Name</string>
    <string name="profile_family_name">Family Name</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_nationality">Nationality</string>
    <string name="profile_mobile">Mobile No</string>
    <string name="profile_passport">Passport No</string>
    <string name="profile_address">Address</string>
    <string name="profile_street1">Street 1</string>
    <string name="profile_street2">Street 2</string>
    <string name="profile_city">City</string>
    <string name="profile_post_code">Postcode</string>
    <string name="profile_state">State</string>
    <string name="profile_country">Country</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_emergency">Emergency Contact</string>
    <string name="profile_name">Name</string>
    <string name="profile_parent_detail">Parent Details</string>
    <string name="profile_document_no">Document Number</string>
    <string name="profile_edit">EDIT</string>
    <string name="profile_bigshot_id">BIG Member ID :</string>
    <string name="search_flight_title">Select your origin</string>
    <string name="book_flight_departure_title">Departure</string>
    <string name="book_flight_destination_title">Destination</string>
    <string name="book_flight_departure_dates">Departure Date</string>
    <string name="book_flight_select_departure_date">Select departure date</string>
    <string name="book_flight_return_date">Return Date</string>
    <string name="book_flight_select_return_date">Select return date</string>
    <string name="holiday_shaker_reedem">REDEEM</string>
    <string name="register_title">Sign up</string>
    <string name="register_continue">Register ></string>
    <string name="register_given_name">Given Name</string>
    <string name="register_family_name">Family Name</string>
    <string name="register_nick_name">Nickname</string>
    <string name="register_nationality">Nationality</string>
    <string name="register_mobile">Mobile</string>
    <string name="register_personal_detail">PERSONAL DETAIL</string>
    <string name="register_contact_detail">CONTACT DETAILS</string>
    <string name="register_postcode">Postcode</string>
    <string name="register_select_state">Please select state</string>
    <string name="register_select_language">Please select language</string>
    <string name="register_select_country">Please select country</string>
    <string name="register_select_nationality">Please select nationality</string>
    <string name="register_check_subscribe">Subscribe to AirAsia Newsletter.</string>
    <string name="register_newsletter_language_hint">Please select language</string>
    <string name="register_general_loading">Loading &#8230;</string>
    <string name="register_password_style">Password must be 8&#8211;15 alphanumeric characters with these reuirement: number (0&#8211;9), lowercase letter (a&#8211;z),uppercase letter (A&#8211;Z)</string>
    <string name="register_city">Town/City</string>
    <string name="register_newsletter_language">Newsletter Language</string>
    <string name="register_confirm_information">
    <![CDATA[
        I confirm that the above information provided by me is true and accurate and understand that the AirAsia BIG Loyalty Programme is operated by Think BIG Digital Sdn Bhd. I have read and hereby agree to the <a href="http://www.airasiabig.com/my/en/assets/pdf/tnc-big-loyalty_en-GB.pdf" style="color: #FF0000;">terms and conditions of the AirAsia BIG Loyalty Membership</a> operated by Think BIG Digital Sdn Bhd, which shall be binding on me.
    ]]>
    </string>
    <string name="failed_msg_sorry">We\'re sorry,</string>
    <string name="failed_msg_transaction">your transaction is unsuccessful.</string>
    <string name="failed_msg_tryagain">Please try again</string>
    <string name="failed_msg_button">TRY AGAIN</string>
    <string name="failed_msg_cancel">CANCEL FLIGHT</string>
    <string name="premium_flatbed">Premium Flatbed</string>
    <string name="baggage_kg">20kg baggage</string>
    <string name="hot_seat">Free Hot Seats Selection</string>
    <string name="comp_meal">1 complimentary meal</string>
    <string name="fare_differ">2 times flight date/time changes up to 2 hours prior to departure. Subject to any fare differences</string>
    <string name="lounge">Lounge access for international flights departing KLIA2</string>
    <string name="kg_baggage">40kg baggage</string>
    <string name="any_differ">Unlimited flight date/time changes up to 2 hours before departure. Subject to any fare differences.</string>
    <string name="lounge2">Flatbed + Lounge access for international flights departing KLIA2</string>
</resources>