<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_gradient_color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_warning"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/failed_msg_sorry"
            android:paddingTop="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font18sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/failed_msg_transaction"
            android:paddingTop="0dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/failed_msg_tryagain"
            android:textColor="@color/white"
            android:textSize="@dimen/font18sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/txtRetry"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/failed_msg_button"
            android:textColor="#e41910"
            android:layout_marginTop="15sp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:textSize="18dp"
            android:padding="15sp"
            android:layout_marginTop="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/failed_msg_cancel"
            android:textColor="#e41910"
            android:gravity="center"
            android:id="@+id/txtCancelFlight" />

    </LinearLayout>

</RelativeLayout>