<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="false"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:padding="5dp"
                android:src="@drawable/tick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baggage_kg"
                android:paddingLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:padding="5dp"
                android:src="@drawable/tick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hot_seat"
                android:paddingLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:padding="5dp"
                android:src="@drawable/tick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comp_meal"
                android:paddingLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:padding="5dp"
                android:src="@drawable/tick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fare_differ"
                android:paddingLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:padding="5dp"
                android:src="@drawable/tick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lounge"
                android:paddingLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

<!--
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#adaaad" />
-->

</LinearLayout>