<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="5dp">

        <com.app.tbd.utils.FontStyle.PlayTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:layout_marginLeft="15dp"
            android:hint="@string/email"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.app.tbd.utils.FontStyle.PlayEditText
            android:id="@+id/updatePwUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/drawable_login_bottom_border"
            android:hint="@string/forgot_password_email"
            android:padding="10dp"
            android:layout_marginTop="-3dp"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/grey"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="5dp">

        <com.app.tbd.utils.FontStyle.PlayTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:layout_marginLeft="15dp"
            android:hint="@string/current_password"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.app.tbd.utils.FontStyle.PlayEditText
            android:id="@+id/updatePwPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/drawable_login_bottom_border"
            android:hint="@string/login_example_password"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/grey"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="5dp">

        <com.app.tbd.utils.FontStyle.PlayTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:layout_marginLeft="15dp"
            android:hint="@string/reset_new_password"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.app.tbd.utils.FontStyle.PlayEditText
            android:id="@+id/updatePwNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/drawable_login_bottom_border"
            android:hint="@string/login_example_password"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/grey"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>